refactor: 현재가 갱신 단순 스트림 방식으로 변경